--- a/styles.css
+++ b/styles.css
@@ -30,12 +30,12 @@ body {
 
 
 .form-container {
-    background-color: var(--form-background-color);
+    background-color: white;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-    width: 100%;
-    max-width: 500px;
+    width: 100%;   /* Ubah width */
+    max-width: 500px;  /* Pastikan form tidak terlalu lebar */
 }
 
 h2 {
