--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
 }
 
 h2 {
-    text-align: center;
+    text-align: left;
     font-size: 24px;
     color: #333;
     margin-bottom: 70px;
