--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
     padding: 0;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: left;
     height: 100vh;
 }
 
